fixed spelling error in qualifications

--- a/qualifications.html
+++ b/qualifications.html
@@ -76,7 +76,7 @@
           <div class="col-sm">
             <h4> Zachary Lawton </h4>
             <p>
-              Thank you for visiting my website! If you want to get in contact with me, please email me or connect with me on LinkedIn.n.
+              Thank you for visiting my website! If you want to get in contact with me, please email me or connect with me on LinkedIn.
             </p>
           </div>
           <div class="col-sm">
